Fix mobile hero and nav clipped by browser chrome

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ nav {
   top: 0; left: 0;
   width: var(--nav-w);
   height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -104,6 +105,7 @@ main { margin-left: var(--nav-w); min-height: 100vh; }
   width: 100vw;
   position: relative;
   height: 100vh;
+  height: 100dvh;
   overflow: hidden;
 }
 #home.active {
